The last of the locale stuff. If your locale file no longer is translated, please help us re-translate it at getlocalization.com/mcMMO

--- a/src/main/resources/locale/locale_en-US.properties
+++ b/src/main/resources/locale/locale_en-US.properties
@@ -183,7 +183,7 @@ Mining.Blast.Effect.5=+60% ore yield, no debris, double drops
 Mining.Blast.Effect.6=+65% ore yield, no debris, triple drops
 Mining.Blast.Effect.7=+70% ore yield, no debris, triple drops
 Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
-Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0} [[GRAY]]({1})
+Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Your [[YELLOW]]Blast Mining [[GREEN]]ability is refreshed!
 
@@ -226,6 +226,7 @@ Swords.Ability.Lower=[[GRAY]]**YOU LOWER YOUR SWORD**
 Swords.Ability.Ready=[[GREEN]]**YOU READY YOUR SWORD**
 Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0} %
 Swords.Combat.Bleed.Length=[[RED]]Bleed Length: [[YELLOW]]{0} ticks
+Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
 Swords.Combat.Bleeding.Stopped=[[GRAY]]The bleeding has [[GREEN]]stopped[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**ENEMY BLEEDING**
 Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}%
@@ -239,10 +240,8 @@ Swords.Effect.2=Serrated Strikes (ABILITY)
 Swords.Effect.3=25% DMG AoE, Bleed+ AoE
 Swords.Effect.4=Serrated Strikes Bleed+
 Swords.Effect.5=5 Tick Bleed
-Swords.Effect.6=Parrying
-Swords.Effect.7=Negates Damage
-Swords.Effect.8=Bleed
-Swords.Effect.9=Apply a bleed DoT
+Swords.Effect.6=Bleed
+Swords.Effect.7=Apply a bleed DoT
 Swords.Listener=Swords: 
 Swords.SkillName=SWORDS
 Swords.Skills.SS.Off=[[RED]]**Serrated Strikes has worn off**
@@ -252,13 +251,12 @@ Swords.Skills.SS.Other.Off=[[RED]]Serrated Strikes[[GREEN]] has worn off for [[Y
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Serrated Strikes!
 Swords.SkillUp=[[YELLOW]]Swords skill increased by {0}. Total ({1})
 Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
-Swords.SS.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
 
 #TAMING
 Taming.Ability.Bonus.0=Environmentally Aware
 Taming.Ability.Bonus.1=Wolves avoid danger
 Taming.Ability.Bonus.2=Thick Fur
-Taming.Ability.Bonus.3=Halved Damage, Fire Resistance
+Taming.Ability.Bonus.3=1/2 Damage, Fire Resistance
 Taming.Ability.Bonus.4=Shock Proof
 Taming.Ability.Bonus.5=Explosives do 1/6 normal damage
 Taming.Ability.Bonus.6=Sharpened Claws
@@ -277,9 +275,10 @@ Taming.Effect.10=Shock Proof
 Taming.Effect.11=Explosive Damage Reduction
 Taming.Effect.12=Call of the Wild
 Taming.Effect.13=Summon an animal to your side
-Taming.Effect.14=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones/Fish in hand
-Taming.Effect.15=Fast Food Service
-Taming.Effect.16=Chance for wolves to heal on attack
+Taming.Effect.14=[[GRAY]]COTW (Ocelot): Crouch and left-click with {0} Fish in hand
+Taming.Effect.15=[[GRAY]]COTW (Wolf): Crouch and left-click with {0} Bones in hand
+Taming.Effect.16=Fast Food Service
+Taming.Effect.17=Chance for wolves to heal on attack
 Taming.Effect.2=Gore
 Taming.Effect.3=Critical Strike that applies Bleed
 Taming.Effect.4=Sharpened Claws
@@ -297,7 +296,7 @@ Taming.Summon.Fail.Ocelot=[[RED]]You have too many ocelots nearby to summon any 
 Taming.Summon.Fail.Wolf=[[RED]]You have too many wolves nearby to summon any more.
 
 #UNARMED
-Unarmed.Ability.Beserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
+Unarmed.Ability.Berserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Iron Arm Style
 Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}%
