--- a/src/main/resources/locale/locale_lv.properties
+++ b/src/main/resources/locale/locale_lv.properties
@@ -11,10 +11,10 @@ Acrobatics.Listener=Acrobatics:
 Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}%
 Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}%
 Acrobatics.Roll.Text=**Rolled**
-Acrobatics.SkillName=ACROBATICS
+Acrobatics.SkillName=AKROB\u0100TIKA
 Acrobatics.Skillup=[[YELLOW]]Acrobatics skill increased by {0}. Total ({1})
 Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}%
+Archery.Combat.RetrieveChance=[[RED]]Iesp\u0113ja atg\u016bt bultas: [[YELLOW]]{0}%
 Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}%
 Archery.Effect.0=Skill Shot
 Archery.Effect.1=Increases damage done with bows
@@ -26,8 +26,8 @@ Archery.Listener=Archery:
 Archery.SkillName=ARCHERY
 Archery.Skillup=[[YELLOW]]Archery skill increased by {0}. Total ({1})
 Axes.Ability.Bonus.0=Axe Mastery
-Axes.Ability.Bonus.1=Bonus {0} damage
-Axes.Ability.Bonus.2=Impact
+Axes.Ability.Bonus.1=Bonus {0} boj\u0101jumi 
+Axes.Ability.Bonus.2=Ietekme
 Axes.Ability.Bonus.3=Deal {0} Bonus DMG to armor
 Axes.Ability.Bonus.4=Greater Impact
 Axes.Ability.Bonus.5=Deal {0} Bonus DMG to unarmored foes
@@ -35,7 +35,7 @@ Axes.Ability.Lower=[[GRAY]]**YOU LOWER YOUR AXE**
 Axes.Ability.Ready=[[GREEN]]**YOU READY YOUR AXE**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]Struck by CLEAVE!
 Axes.Combat.CritStruck=[[DARK_RED]]You were CRITICALLY hit!
-Axes.Combat.CritChance=[[RED]]Chance to critically strike: [[YELLOW]]{0}%
+Axes.Combat.CritChance=[[RED]]Iesp\u0113ja kritiskajam uzbrukumam: [[YELLOW]]{0}%
 Axes.Combat.CriticalHit=[[RED]]CRITICAL HIT!
 Axes.Combat.GI.Proc=[[GREEN]]**STRUCK WITH GREAT FORCE**
 Axes.Combat.GI.Struck=[[RED]]**HIT BY GREATER IMPACT**
@@ -66,7 +66,7 @@ Excavation.Effect.2=Treasure Hunter
 Excavation.Effect.3=Ability to dig for treasure
 Excavation.Effect.Length=[[RED]]Giga Drill Breaker Length: [[YELLOW]]{0}s
 Excavation.Listener=Excavation:
-Excavation.SkillName=EXCAVATION
+Excavation.SkillName=EKSKAV\u0100CIJA
 Excavation.Skills.GigaDrillBreaker.Off=[[RED]]**Giga Drill Breaker has worn off**
 Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREAKER ACTIVATED**
 Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Giga Drill Breaker [[GREEN]]ability is refreshed!
@@ -84,7 +84,7 @@ Fishing.Effect.3=Find Enchanted Items
 Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
 Fishing.ItemFound=[[GRAY]]Treasure found!
-Fishing.Listener=Fishing:
+Fishing.Listener=Zvejo\u0161ana:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
@@ -154,7 +154,7 @@ Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Your [[YELLOW]]Blast Mining [[GREEN]]ability is refreshed!
-Repair.Effects.0=Repair
+Repair.Effects.0=Salabot
 Repair.Effects.1=Repair Iron Tools & Armor
 Repair.Effects.2=Repair Mastery
 Repair.Effects.3=Increased repair amount
@@ -171,7 +171,7 @@ Repair.Skills.AdeptDiamond=[[DARK_RED]]You\'re not skilled enough to repair Diam
 Repair.Skills.AdeptGold=[[DARK_RED]]You\'re not skilled enough to repair Gold.
 Repair.Skills.AdeptIron=[[DARK_RED]]You\'re not skilled enough to repair Iron.
 Repair.Skills.AdeptStone=[[DARK_RED]]You\'re not skilled enough to repair Stone.
-Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
+Repair.Skills.FeltEasy=[[GRAY]]Tas lik\u0101s viegli.
 Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0}% durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]You can\'t repair stacked items.
@@ -196,7 +196,7 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Hit with a counter-attack!
 Swords.Combat.Countered=[[GREEN]]**COUNTER-ATTACKED**
 Swords.Combat.Parry.Chance=[[RED]]Parry Chance: [[YELLOW]]{0} %
 Swords.Combat.SS.Struck=[[DARK_RED]]Struck by SERRATED STRIKES!
-Swords.Effect.0=Counter Attack
+Swords.Effect.0=Pretsitiens 
 Swords.Effect.1=Reflect 50% of damage taken
 Swords.Effect.2=Serrated Strikes (ABILITY)
 Swords.Effect.3=25% DMG AoE, Bleed+ AoE
@@ -221,7 +221,7 @@ Taming.Ability.Bonus.4=Shock Proof
 Taming.Ability.Bonus.5=Explosives do 1/6 normal damage
 Taming.Ability.Bonus.6=Sharpened Claws
 Taming.Ability.Bonus.7=+2 Damage
-Taming.Ability.Bonus.8=Fast Food Service
+Taming.Ability.Bonus.8=\u0100tro \u0112dienu Pakalpojumi 
 Taming.Ability.Bonus.9=50% Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL 100+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (THICK FUR)
@@ -263,14 +263,14 @@ Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
 Unarmed.Ability.Ready=[[GREEN]]**YOU READY YOUR FISTS**
 Unarmed.Effect.0=Berserk (ABILITY)
 Unarmed.Effect.1=+50% DMG, Breaks weak materials
-Unarmed.Effect.2=Disarm (Players)
+Unarmed.Effect.2=Atbru\u0146ot(Sp\u0113l\u0113t\u0101ju)
 Unarmed.Effect.3=Drops the foes item held in hand
 Unarmed.Effect.4=Iron Arm Style
 Unarmed.Effect.5=Hardens your arm over time
 Unarmed.Effect.6=Arrow Deflect
 Unarmed.Effect.7=Deflect arrows
 Unarmed.Listener=Unarmed:
-Unarmed.SkillName=UNARMED
+Unarmed.SkillName=NEAPBRU\u0145OTS
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserk has worn off**
 Unarmed.Skills.Berserk.On=[[GREEN]]**BERSERK ACTIVATED**
 Unarmed.Skills.Berserk.Other.Off=[[RED]]Berserk[[GREEN]] has worn off for [[YELLOW]]{0}
@@ -296,25 +296,25 @@ Woodcutting.Skills.TreeFeller.Refresh=[[GREEN]]Your [[YELLOW]]Tree Feller [[GREE
 Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]Tree Feller[[GREEN]] has worn off for [[YELLOW]]{0}
 Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Tree Feller!
 Woodcutting.Skills.TreeFeller.Splinter=[[RED]]YOUR AXE SPLINTERS INTO DOZENS OF PIECES!
-Woodcutting.Skills.TreeFellerThreshold=[[RED]]That tree is too large!
+Woodcutting.Skills.TreeFellerThreshold=[[RED]]Tas koks ir par lielu!
 Woodcutting.Skillup=[[YELLOW]]Woodcutting skill increased by {0}. Total ({1})
 Ability.Generic.Refresh=[[GREEN]]**ABILITIES REFRESHED!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
-Combat.ArrowDeflect=[[WHITE]]**ODBICIE STRZALY**
-Combat.BeastLore=[[GREEN]]**WIEDZA O ZWIERZETACH**
-Combat.BeastLoreHealth=[[DARK_AQUA]]Zycie ([[GREEN]]{0}[[DARK_AQUA]]/{1})
-Combat.BeastLoreOwner=[[DARK_AQUA]]Wlasciciel ([[RED]]{0}[[DARK_AQUA]])
-Combat.BurningArrowHit=[[DARK_RED]]Zostales trafiony plonaca strzala\\!
-Combat.Gore=[[GREEN]]**KRWOTOK**
-Combat.Ignition=[[RED]]**PODPALENIE**
-Combat.StruckByGore=[[RED]]**WYKRWAWIENIE**
-Combat.TargetDazed=Cel zostal [[DARK_RED]]oszolomiony.
-Combat.TouchedFuzzy=[[DARK_RED]]Zostales oszolomiony.
+Combat.ArrowDeflect=[[WHITE]]**ARROW DEFLECT**
+Combat.BeastLore=[[GREEN]]**BEAST LORE**
+Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
+Combat.BeastLoreOwner=[[DARK_AQUA]]Owner ([[RED]]{0}[[DARK_AQUA]])
+Combat.BurningArrowHit=[[DARK_RED]]You were struck by a burning arrow!
+Combat.Gore=[[GREEN]]**GORED**
+Combat.Ignition=[[RED]]**IGNITION**
+Combat.StruckByGore=[[RED]]**YOU HAVE BEEN GORED**
+Combat.TargetDazed=Target was [[DARK_RED]]Dazed
+Combat.TouchedFuzzy=[[DARK_RED]]Touched Fuzzy. Felt Dizzy.
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),,[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
-Commands.AdminChat.Off=Admin Chat only [[RED]]Off
+Commands.AdminChat.Off=Tikai Adminu \u010dats [[RED]]Izsl\u0113gt
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
 Commands.AdminToggle=[[RED]]- Toggle admin chat
 Commands.Disabled=[[RED]]This command is disabled.
@@ -329,7 +329,7 @@ Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
 Commands.mcgod=[[RED]]- Toggle GodMode
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
 Commands.ModDescription=[[RED]]- Read brief mod description
-Commands.NoConsole=This command does not support console usage.
+Commands.NoConsole=\u0160\u012b komanda neatbalsta konsules izmanto\u0161anu.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
 Commands.Party.Accept=[[RED]]- Accept party invite
 Commands.Party.Chat.Off=Party Chat only [[RED]]Off
@@ -352,12 +352,12 @@ Commands.PowerLevel=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0}
 Commands.Skill.Invalid=[[RED]]That is not a valid skillname!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Leaderboard--
 Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
-Commands.Stats.Self=YOUR STATS
+Commands.Stats.Self=TAVI STATI
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
 mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[BLUE]] for help.
 mcMMO.NoInvites=[[RED]]You have no invites at this time
-mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
+mcMMO.NoPermission=[[DARK_RED]]Nepietiekama at\u013cauja.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
 mcMMO.Wiki=[[GREEN]]http://mcmmo.wikia.com[[BLUE]] - mcMMO Wiki
 Commands.Party.InParty=[[GREEN]]Party: {0}
@@ -370,21 +370,21 @@ Party.Help.4=[[RED]]To lock or unlock your party, use /party <lock/unlock>
 Party.Help.5=[[RED]]To password protect your party, use /party password <password>
 Party.Help.6=[[RED]]To kick a player from your party, use /party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <player>
-Party.InformedOnJoin={0} [[GREEN]] dolaczyl do twojej grupy.
-Party.InformedOnQuit={0} [[GREEN]] wyszedl z twojej grupy.
+Party.InformedOnJoin={0} [[GREEN]] has joined your party
+Party.InformedOnQuit={0} [[GREEN]] has left your party
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
 Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
-Party.Locked=[[RED]]Grupa jest zamknieta, tylko wlasciciel moze dodac graczy.
-Party.NotInYourParty=[[DARK_RED]]{0} nie jest czlonkiem twojej grupy.
-Party.NotOwner=[[DARK_RED]]Nie jestes wlascicielem tej grupy.
-Party.PasswordSet=[[GREEN]]Haslo grupy zmienione na: {0}
+Party.Locked=[[RED]]Party is locked, only party leader may invite.
+Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
+Party.NotOwner=[[DARK_RED]]You are not the party owner
+Party.PasswordSet=[[GREEN]]Party password set to {0}
 Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
-Party.Unlocked=[[GRAY]]Grupa jest otwarta dla wszystkich.
+Party.Unlocked=[[GRAY]]Party is unlocked
 Commands.XPGain.Acrobatics=Falling
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Attacking Monsters
@@ -395,8 +395,8 @@ Commands.XPGain.Mining=Mining Stone & Ore
 Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Attacking Monsters
 Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
-Commands.XPGain.Unarmed=Attacking Monsters
-Commands.XPGain.WoodCutting=Chopping down trees
+Commands.XPGain.Unarmed=Uzbr\u016bk Monstriem 
+Commands.XPGain.WoodCutting=Koku cir\u0161ana
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
@@ -407,7 +407,7 @@ Commands.xprate.proper.2=[[RED]]Please specify true or false to indicate if this
 Commands.xprate.started.0=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
 Commands.xprate.started.1=[[GOLD]]mcMMO XP RATE IS NOW {0}x!
 XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
-Effects.Effects=EFFECTS
+Effects.Effects=EFEKTI
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
@@ -420,7 +420,7 @@ Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining st
 Guides.Repair=Guide coming soon...
 Guides.Swords=Guide coming soon...
 Guides.Taming=Guide coming soon...
-Guides.Unarmed=Guide coming soon...
+Guides.Unarmed=Dr\u012bzum\u0101 izn\u0101ks pam\u0101c\u012bba..
 Guides.Woodcutting=Guide coming soon...
 Inspect.Offline=[[RED]]That player is offline, inspecting offline players is limited to Ops!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
@@ -429,11 +429,11 @@ Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
 Item.ChimaeraWing.Pass=**CHIMAERA WING**
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
-Skills.Disarmed=[[DARK_RED]]Zostales rozbrojony!
+Skills.Disarmed=[[DARK_RED]]Tevi ir atbru\u0146oju\u0161i!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
-Skills.NeedMore=[[DARK_RED]]Potrzebujesz wiecej
+Skills.NeedMore=[[DARK_RED]]You need more
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
-Skills.TooTired=[[RED]]Musisz odpoczac zanim ponownie uzyjesz tej umiejetnosci.
+Skills.TooTired=[[RED]]You are too tired to use that ability again.
 Stats.Header.Combat=[[GOLD]]-=COMBAT SKILLS=-
 Stats.Header.Gathering=[[GOLD]]-=GATHERING SKILLS=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
