--- a/src/main/resources/locale/locale_pt-BR.properties
+++ b/src/main/resources/locale/locale_pt-BR.properties
@@ -301,16 +301,16 @@ Woodcutting.Skillup=[[YELLOW]]Woodcutting skill increased by {0}. Total ({1})
 Ability.Generic.Refresh=[[GREEN]]**ABILITIES REFRESHED!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
-Combat.ArrowDeflect=[[WHITE]]**ODBICIE STRZALY**
-Combat.BeastLore=[[GREEN]]**WIEDZA O ZWIERZETACH**
-Combat.BeastLoreHealth=[[DARK_AQUA]]Zycie ([[GREEN]]{0}[[DARK_AQUA]]/{1})
-Combat.BeastLoreOwner=[[DARK_AQUA]]Wlasciciel ([[RED]]{0}[[DARK_AQUA]])
-Combat.BurningArrowHit=[[DARK_RED]]Zostales trafiony plonaca strzala\\!
-Combat.Gore=[[GREEN]]**KRWOTOK**
-Combat.Ignition=[[RED]]**PODPALENIE**
-Combat.StruckByGore=[[RED]]**WYKRWAWIENIE**
-Combat.TargetDazed=Cel zostal [[DARK_RED]]oszolomiony.
-Combat.TouchedFuzzy=[[DARK_RED]]Zostales oszolomiony.
+Combat.ArrowDeflect=[[WHITE]]*DESVIOU A FLECHA*
+Combat.BeastLore=[[GREEN]]*CONHECIMENTO DE FERAS*
+Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
+Combat.BeastLoreOwner=[[DARK_AQUA]]Dono ([[RED]]{0}[[DARK_AQUA]])
+Combat.BurningArrowHit=[[DARK_RED]]Voc\u00ea foi atingido por uma flecha flamejante\\!
+Combat.Gore=[[GREEN]]*MORDIDA*
+Combat.Ignition=[[RED]]*IGNI\u00c7AO*
+Combat.StruckByGore=[[RED]]*ATINGIDO POR MORDIDA*
+Combat.TargetDazed=Alvo foi [[DARK_RED]]Atordoado
+Combat.TouchedFuzzy=[[DARK_RED]]Visao turva. Sente Tonturas.
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),,[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
@@ -370,21 +370,21 @@ Party.Help.4=[[RED]]To lock or unlock your party, use /party <lock/unlock>
 Party.Help.5=[[RED]]To password protect your party, use /party password <password>
 Party.Help.6=[[RED]]To kick a player from your party, use /party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <player>
-Party.InformedOnJoin={0} [[GREEN]] dolaczyl do twojej grupy.
-Party.InformedOnQuit={0} [[GREEN]] wyszedl z twojej grupy.
+Party.InformedOnJoin={0} [[GREEN]] entrou na equipe
+Party.InformedOnQuit={0} [[GREEN]] saiu da equipe
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
 Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
-Party.Locked=[[RED]]Grupa jest zamknieta, tylko wlasciciel moze dodac graczy.
-Party.NotInYourParty=[[DARK_RED]]{0} nie jest czlonkiem twojej grupy.
-Party.NotOwner=[[DARK_RED]]Nie jestes wlascicielem tej grupy.
-Party.PasswordSet=[[GREEN]]Haslo grupy zmienione na: {0}
+Party.Locked=[[RED]]Equipe est\u00e1 trancada, s\u00f3 o l\u00edder pode convidar.
+Party.NotInYourParty=[[DARK_RED]]{0} nao est\u00e1 na sua equipe
+Party.NotOwner=[[DARK_RED]]Voc\u00ea nao \u00e9 o l\u00edder da equipe
+Party.PasswordSet=[[GREEN]]Senha da equipe: {0}
 Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
-Party.Unlocked=[[GRAY]]Grupa jest otwarta dla wszystkich.
+Party.Unlocked=[[GRAY]]Equipe foi Destrancada
 Commands.XPGain.Acrobatics=Falling
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Attacking Monsters
@@ -398,9 +398,9 @@ Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
 Commands.XPGain.Unarmed=Attacking Monsters
 Commands.XPGain.WoodCutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
-Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
-Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
-Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
+Commands.xplock.locked=[[GOLD]]Sua barra de XP BAR est\u00e1 travada em {0}!
+Commands.xplock.unlocked=[[GOLD]]Sua barra de XP foi [[GREEN]]DESTRAVADA[[GOLD]]!
+Commands.xprate.over=[[RED]]Evento de XP Rate acabou!!
 Commands.xprate.proper.0=[[RED]]Proper usage to change the XP rate is /xprate <integer> <true/false>
 Commands.xprate.proper.1=[[RED]]Proper usage to restore the XP rate to default is /xprate reset
 Commands.xprate.proper.2=[[RED]]Please specify true or false to indicate if this is an xp event or not
@@ -429,11 +429,11 @@ Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
 Item.ChimaeraWing.Pass=**CHIMAERA WING**
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
-Skills.Disarmed=[[DARK_RED]]Zostales rozbrojony!
+Skills.Disarmed=[[DARK_RED]]Voc\u00ea foi Desarmado!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
-Skills.NeedMore=[[DARK_RED]]Potrzebujesz wiecej
+Skills.NeedMore=[[DARK_RED]]Voc\u00ea precisa de mais
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
-Skills.TooTired=[[RED]]Musisz odpoczac zanim ponownie uzyjesz tej umiejetnosci.
+Skills.TooTired=[[RED]]Voc\u00ea est\u00e1 cansado pra usar essa habilidade.
 Stats.Header.Combat=[[GOLD]]-=COMBAT SKILLS=-
 Stats.Header.Gathering=[[GOLD]]-=GATHERING SKILLS=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
