--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.3.06-dev
  + Added API functions for obtaining offline profiles & profiles via player names
  + Added API functions for admin & party chat
  + Added Iron Grip skill to Unarmed which gives players an chance to keep from being disarmed.
+ + Added some new languages to the locale files.
  = Fixed bug where Herbalism required double drops permission to give XP
  = Fixed bug where {0} would be displayed in front of your power level in mcstats
  = Fixed mmoupdate not being useable from console
@@ -21,6 +22,9 @@ Version 1.3.06-dev
  = Fixed bug with fishing treasures when treasures list is empty
  = Fixed bug with only getting one level when there was enough XP for multiple levels.
  = Fixed bugs with the way /mctop displayed
+ = Fixed issues with custom characters & locale files.
+ ! Changed default locale name to en-US rather than en_us for the sake of compliance
+ ! Changed locale files to use a new naming scheme. This breaks ALL old locale files. If you want to assist with re-translating anything, go to getlocalization.com/mcMMO
  ! Changed mcremove to check for users in the MySQL DB before sending queries to remove them
  ! Changed how the tree feller threshold worked for the better
  ! Changed /mcremove to no longer kick players when they are removed from database
