--- a/src/main/resources/locale/locale_ko.properties
+++ b/src/main/resources/locale/locale_ko.properties
@@ -66,7 +66,7 @@ Excavation.Effect.2=Treasure Hunter
 Excavation.Effect.3=Ability to dig for treasure
 Excavation.Effect.Length=[[RED]]Giga Drill Breaker Length: [[YELLOW]]{0}s
 Excavation.Listener=Excavation:
-Excavation.SkillName=EXCAVATION
+Excavation.SkillName=\ubc1c\uad74
 Excavation.Skills.GigaDrillBreaker.Off=[[RED]]**Giga Drill Breaker has worn off**
 Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREAKER ACTIVATED**
 Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Giga Drill Breaker [[GREEN]]ability is refreshed!
@@ -130,7 +130,7 @@ Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
 Mining.Ability.Locked.2=LOCKED UNTIL 500+ SKILL (DEMOLITIONS EXPERTISE)
 Mining.Ability.Lower=[[GRAY]]**YOU LOWER YOUR PICKAXE**
-Mining.Ability.Ready=[[GREEN]]**YOU READY YOUR PICKAXE**
+Mining.Ability.Ready=[[GREEN]]**\uace1\uad2d\uc774\ub97c \uc900\ube44\ud558\uc138\uc694.**
 Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}%
 Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 Mining.Listener=Mining:
@@ -271,7 +271,7 @@ Unarmed.Effect.6=Arrow Deflect
 Unarmed.Effect.7=Deflect arrows
 Unarmed.Listener=Unarmed:
 Unarmed.SkillName=UNARMED
-Unarmed.Skills.Berserk.Off=[[RED]]**Berserk has worn off**
+Unarmed.Skills.Berserk.Off=[[RED]]**\ubc84\uc11c\ud06c \ud574\uc81c**
 Unarmed.Skills.Berserk.On=[[GREEN]]**BERSERK ACTIVATED**
 Unarmed.Skills.Berserk.Other.Off=[[RED]]Berserk[[GREEN]] has worn off for [[YELLOW]]{0}
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Berserk!
@@ -301,16 +301,16 @@ Woodcutting.Skillup=[[YELLOW]]Woodcutting skill increased by {0}. Total ({1})
 Ability.Generic.Refresh=[[GREEN]]**ABILITIES REFRESHED!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
-Combat.ArrowDeflect=[[WHITE]]**ODBICIE STRZALY**
-Combat.BeastLore=[[GREEN]]**WIEDZA O ZWIERZETACH**
-Combat.BeastLoreHealth=[[DARK_AQUA]]Zycie ([[GREEN]]{0}[[DARK_AQUA]]/{1})
-Combat.BeastLoreOwner=[[DARK_AQUA]]Wlasciciel ([[RED]]{0}[[DARK_AQUA]])
-Combat.BurningArrowHit=[[DARK_RED]]Zostales trafiony plonaca strzala\\!
-Combat.Gore=[[GREEN]]**KRWOTOK**
-Combat.Ignition=[[RED]]**PODPALENIE**
-Combat.StruckByGore=[[RED]]**WYKRWAWIENIE**
-Combat.TargetDazed=Cel zostal [[DARK_RED]]oszolomiony.
-Combat.TouchedFuzzy=[[DARK_RED]]Zostales oszolomiony.
+Combat.ArrowDeflect=[[WHITE]]**ARROW DEFLECT**
+Combat.BeastLore=[[GREEN]]**BEAST LORE**
+Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
+Combat.BeastLoreOwner=[[DARK_AQUA]]Owner ([[RED]]{0}[[DARK_AQUA]])
+Combat.BurningArrowHit=[[DARK_RED]]You were struck by a burning arrow!
+Combat.Gore=[[GREEN]]**GORED**
+Combat.Ignition=[[RED]]**IGNITION**
+Combat.StruckByGore=[[RED]]**YOU HAVE BEEN GORED**
+Combat.TargetDazed=Target was [[DARK_RED]]Dazed
+Combat.TouchedFuzzy=[[DARK_RED]]Touched Fuzzy. Felt Dizzy.
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),,[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
@@ -370,21 +370,21 @@ Party.Help.4=[[RED]]To lock or unlock your party, use /party <lock/unlock>
 Party.Help.5=[[RED]]To password protect your party, use /party password <password>
 Party.Help.6=[[RED]]To kick a player from your party, use /party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <player>
-Party.InformedOnJoin={0} [[GREEN]] dolaczyl do twojej grupy.
-Party.InformedOnQuit={0} [[GREEN]] wyszedl z twojej grupy.
+Party.InformedOnJoin={0} [[GREEN]] has joined your party
+Party.InformedOnQuit={0} [[GREEN]] has left your party
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
 Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
-Party.Locked=[[RED]]Grupa jest zamknieta, tylko wlasciciel moze dodac graczy.
-Party.NotInYourParty=[[DARK_RED]]{0} nie jest czlonkiem twojej grupy.
-Party.NotOwner=[[DARK_RED]]Nie jestes wlascicielem tej grupy.
-Party.PasswordSet=[[GREEN]]Haslo grupy zmienione na: {0}
+Party.Locked=[[RED]]Party is locked, only party leader may invite.
+Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
+Party.NotOwner=[[DARK_RED]]You are not the party owner
+Party.PasswordSet=[[GREEN]]Party password set to {0}
 Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
-Party.Unlocked=[[GRAY]]Grupa jest otwarta dla wszystkich.
+Party.Unlocked=[[GRAY]]\ud30c\ud2f0\uac00 \ud574\uc81c\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
 Commands.XPGain.Acrobatics=Falling
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Attacking Monsters
@@ -429,11 +429,11 @@ Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
 Item.ChimaeraWing.Pass=**CHIMAERA WING**
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
-Skills.Disarmed=[[DARK_RED]]Zostales rozbrojony!
+Skills.Disarmed=[[DARK_RED]]\ud604\uc7ac \ubb34\uc7a5\ud574\uc81c \ub410\uc2b5\ub2c8\ub2e4!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
-Skills.NeedMore=[[DARK_RED]]Potrzebujesz wiecej
+Skills.NeedMore=[[DARK_RED]]You need more
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
-Skills.TooTired=[[RED]]Musisz odpoczac zanim ponownie uzyjesz tej umiejetnosci.
+Skills.TooTired=[[RED]]You are too tired to use that ability again.
 Stats.Header.Combat=[[GOLD]]-=COMBAT SKILLS=-
 Stats.Header.Gathering=[[GOLD]]-=GATHERING SKILLS=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
