--- a/src/main/resources/locale/locale_sv.properties
+++ b/src/main/resources/locale/locale_sv.properties
@@ -1,5 +1,5 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Graceful Landing**
-Acrobatics.Combat.Proc=[[GREEN]]**Dodged**
+Acrobatics.Combat.Proc=[[GREEN]]**Duckade**
 Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}%
 Acrobatics.Effect.0=Roll
 Acrobatics.Effect.1=Reduces or Negates fall damage
@@ -12,9 +12,9 @@ Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}%
 Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}%
 Acrobatics.Roll.Text=**Rolled**
 Acrobatics.SkillName=ACROBATICS
-Acrobatics.Skillup=[[YELLOW]]Acrobatics skill increased by {0}. Total ({1})
+Acrobatics.Skillup=[[YELLOW]]Akrobatikf\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
 Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}%
+Archery.Combat.RetrieveChance=[[RED]]Chans att F\u00e5 Pilar: [[YELLOW]]{0}%
 Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}%
 Archery.Effect.0=Skill Shot
 Archery.Effect.1=Increases damage done with bows
@@ -66,7 +66,7 @@ Excavation.Effect.2=Treasure Hunter
 Excavation.Effect.3=Ability to dig for treasure
 Excavation.Effect.Length=[[RED]]Giga Drill Breaker Length: [[YELLOW]]{0}s
 Excavation.Listener=Excavation:
-Excavation.SkillName=EXCAVATION
+Excavation.SkillName=Gr\u00e4vning
 Excavation.Skills.GigaDrillBreaker.Off=[[RED]]**Giga Drill Breaker has worn off**
 Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREAKER ACTIVATED**
 Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Giga Drill Breaker [[GREEN]]ability is refreshed!
@@ -153,7 +153,7 @@ Mining.Blast.Effect.7=+70% ore yield, no debris, triple drops
 Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
-Mining.Blast.Refresh=[[GREEN]]Your [[YELLOW]]Blast Mining [[GREEN]]ability is refreshed!
+Mining.Blast.Refresh=[[GREEN]]Din [[YELLOW]]Explosionshacknings [[GREEN]]f\u00f6rm\u00e5ga \u00e4r fulladdad!
 Repair.Effects.0=Repair
 Repair.Effects.1=Repair Iron Tools & Armor
 Repair.Effects.2=Repair Mastery
@@ -186,10 +186,10 @@ Repair.Arcane.Perfect=[[GREEN]]You have sustained the arcane energies in this it
 Repair.Arcane.Rank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
 Swords.Ability.Lower=[[GRAY]]**YOU LOWER YOUR SWORD**
 Swords.Ability.Ready=[[GREEN]]**YOU READY YOUR SWORD**
-Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0} %
+Swords.Combat.Bleed.Chance=[[RED]]Bl\u00f6dningschans: [[YELLOW]]{0} %
 Swords.Combat.Bleed.Length=[[RED]]Bleed Length: [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
-Swords.Combat.Bleeding.Stopped=[[GRAY]]The bleeding has [[GREEN]]stopped[[GRAY]]!
+Swords.Combat.Bleeding.Stopped=[[GRAY]]F\u00f6rbl\u00f6dningen har [[GREEN]]stoppats[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**ENEMY BLEEDING**
 Swords.Combat.Counter.Chance=[[RED]]Counter Attack Chance: [[YELLOW]]{0}%
 Swords.Combat.Counter.Hit=[[DARK_RED]]Hit with a counter-attack!
@@ -289,7 +289,7 @@ Woodcutting.Effect.3=Blow Away Leaves
 Woodcutting.Effect.4=Double Drops
 Woodcutting.Effect.5=Double the normal loot
 Woodcutting.Listener=Woodcutting:
-Woodcutting.SkillName=WOODCUTTING
+Woodcutting.SkillName=TR\u00c4DHUGGNING
 Woodcutting.Skills.TreeFeller.Off=[[RED]]**Tree Feller has worn off**
 Woodcutting.Skills.TreeFeller.On=[[GREEN]]**TREE FELLER ACTIVATED**
 Woodcutting.Skills.TreeFeller.Refresh=[[GREEN]]Your [[YELLOW]]Tree Feller [[GREEN]]ability is refreshed!
@@ -301,20 +301,20 @@ Woodcutting.Skillup=[[YELLOW]]Woodcutting skill increased by {0}. Total ({1})
 Ability.Generic.Refresh=[[GREEN]]**ABILITIES REFRESHED!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
-Combat.ArrowDeflect=[[WHITE]]**ODBICIE STRZALY**
-Combat.BeastLore=[[GREEN]]**WIEDZA O ZWIERZETACH**
-Combat.BeastLoreHealth=[[DARK_AQUA]]Zycie ([[GREEN]]{0}[[DARK_AQUA]]/{1})
-Combat.BeastLoreOwner=[[DARK_AQUA]]Wlasciciel ([[RED]]{0}[[DARK_AQUA]])
-Combat.BurningArrowHit=[[DARK_RED]]Zostales trafiony plonaca strzala\\!
-Combat.Gore=[[GREEN]]**KRWOTOK**
-Combat.Ignition=[[RED]]**PODPALENIE**
-Combat.StruckByGore=[[RED]]**WYKRWAWIENIE**
-Combat.TargetDazed=Cel zostal [[DARK_RED]]oszolomiony.
-Combat.TouchedFuzzy=[[DARK_RED]]Zostales oszolomiony.
+Combat.ArrowDeflect=[[WHITE]]**ARROW DEFLECT**
+Combat.BeastLore=[[GREEN]]**BEAST LORE**
+Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
+Combat.BeastLoreOwner=[[DARK_AQUA]]Owner ([[RED]]{0}[[DARK_AQUA]])
+Combat.BurningArrowHit=[[DARK_RED]]You were struck by a burning arrow!
+Combat.Gore=[[GREEN]]**GORED**
+Combat.Ignition=[[RED]]**IGNITION**
+Combat.StruckByGore=[[RED]]**YOU HAVE BEEN GORED**
+Combat.TargetDazed=Target was [[DARK_RED]]Dazed
+Combat.TouchedFuzzy=[[DARK_RED]]Touched Fuzzy. Felt Dizzy.
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),,[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
-Commands.AdminChat.Off=Admin Chat only [[RED]]Off
+Commands.AdminChat.Off=Admin chatt endast [[RED]]Av
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
 Commands.AdminToggle=[[RED]]- Toggle admin chat
 Commands.Disabled=[[RED]]This command is disabled.
@@ -370,31 +370,31 @@ Party.Help.4=[[RED]]To lock or unlock your party, use /party <lock/unlock>
 Party.Help.5=[[RED]]To password protect your party, use /party password <password>
 Party.Help.6=[[RED]]To kick a player from your party, use /party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <player>
-Party.InformedOnJoin={0} [[GREEN]] dolaczyl do twojej grupy.
-Party.InformedOnQuit={0} [[GREEN]] wyszedl z twojej grupy.
+Party.InformedOnJoin={0} [[GREEN]] has joined your party
+Party.InformedOnQuit={0} [[GREEN]] has left your party
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
 Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
-Party.Locked=[[RED]]Grupa jest zamknieta, tylko wlasciciel moze dodac graczy.
-Party.NotInYourParty=[[DARK_RED]]{0} nie jest czlonkiem twojej grupy.
-Party.NotOwner=[[DARK_RED]]Nie jestes wlascicielem tej grupy.
-Party.PasswordSet=[[GREEN]]Haslo grupy zmienione na: {0}
+Party.Locked=[[RED]]Party is locked, only party leader may invite.
+Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
+Party.NotOwner=[[DARK_RED]]You are not the party owner
+Party.PasswordSet=[[GREEN]]Party password set to {0}
 Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
-Party.Unlocked=[[GRAY]]Grupa jest otwarta dla wszystkich.
+Party.Unlocked=[[GRAY]]Gruppen \u00e4r nu uppl\u00e5st
 Commands.XPGain.Acrobatics=Falling
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Attacking Monsters
-Commands.XPGain.Excavation=Digging and finding treasures
+Commands.XPGain.Excavation=Gr\u00e4va och hitta skatter.
 Commands.XPGain.Fishing=Fishing (Go figure!)
-Commands.XPGain.Herbalism=Harvesting Herbs
+Commands.XPGain.Herbalism=Sk\u00f6rda \u00f6rter
 Commands.XPGain.Mining=Mining Stone & Ore
 Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Attacking Monsters
-Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
+Commands.XPGain.Taming=Djurt\u00e4mjning, eller sl\u00e5ss m/ dina vargar
 Commands.XPGain.Unarmed=Attacking Monsters
 Commands.XPGain.WoodCutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
@@ -413,7 +413,7 @@ Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Acrobatics=[[DARK_AQUA]]About Acrobatics:\n[[YELLOW]]Acrobatics is the art of moving gracefully in mcMMO.\n[[YELLOW]]It provides combat bonuses and environment damage bonuses.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need to perform a dodge\n[[YELLOW]]in combat or survive falls from heights that damage you.\n\n[[DARK_AQUA]]How does Rolling work?\n[[YELLOW]]You have a passive chance when you take fall damage\n[[YELLOW]]to negate the damage done. You can hold the sneak button to\n[[YELLOW]]double your chances during the fall.\n[[YELLOW]]This triggers a Graceful Roll instead of a standard one.\n[[YELLOW]]Graceful Rolls are like regular rolls but are twice as likely to\n[[YELLOW]]occur and provide more damage safety than regular rolls.\n[[YELLOW]]Rolling chance is tied to your skill level\n[[DARK_AQUA]]How does Dodge work?\n[[YELLOW]]Dodge is a passive chance when you are\n[YELLOW]]injured in combat to halve the damage taken.\n[[YELLOW]]It is tied to your skill level.
 Guides.Archery=Guide coming soon...
 Guides.Axes=Guide coming soon...
-Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
+Guides.Excavation=[DARK_AQUA]]Om Gr\u00e4vning:\n[[YELLOW]]Gr\u00e4vning \u00e4r n\u00e4r man gr\u00e4ver f\u00f6r att leta efter skatter.\n[[YELLOW]]Du hittar skatter genom att gr\u00e4va i marken.\n[[YELLOW]]Ju mer du g\u00f6r detta, desto fler skatter kommer du hitta.\n\n[[DARK_AQUA]]:XP \u00d6KNING\n[[YELLOW]]F\u00f6r att f\u00e5 XP m\u00e5ste du gr\u00e4va med en spade i din hand.\n[[YELLOW]]Man f\u00e5r bara XP av vissa material.\n[[DARK_AQUA]]Kompatibla Material:\n[[YELLOW]]Gr\u00e4s, Jord, Sand, Lera, Grus, Mycelium, Sj\u00e4lssand\n\n[[DARK_AQUA]]Hur du anv\u00e4nder Mega Gr\u00e4varen:\n[[YELLOW]]H\u00f6gerklicka med en spade i din hand.\n[[YELLOW]]N\u00e4r du har gjort det har du 4 sekunder p\u00e5 dig att\n[[YELLOW]]b\u00f6rja gr\u00e4va snabbt och aktivera\n[[YELLOW]] Mega Gr\u00e4varen.\n[[DARK_AQUA]]Vad \u00e4r Mega Gr\u00e4varen?\n[[YELLOW]]Mega Gr\u00e4varen \u00e4r en f\u00f6rm\u00e5ga med pauser\n[[YELLOW]]som \u00e4r till f\u00f6r Gr\u00e4vningsf\u00e4rdigheten\n[[YELLOW]]att hitta skatter och f\u00f6r att gr\u00e4va snabbare\n[[YELLOW]]p\u00e5 Gr\u00e4vningsmaterial\n\n[[DARK_AQUA]]Hur funkar Skatt Letare?\n[[YELLOW]]Varenda m\u00f6jliga skatt f\u00f6r Gr\u00e4vning kr\u00e4ver en viss\n[[YELLOW]]f\u00f6rm\u00e5gelevel  f\u00f6r att droppas, och som ett resultat \u00e4r det\n[[YELLOW]]sv\u00e5rt att s\u00e4ga hur mycket det hj\u00e4lper dig.\n[[YELLOW]]T\u00e4nk bara p\u00e5 att ju h\u00f6gre din Gr\u00e4vningsf\u00f6rm\u00e5ga\n[[YELLOW]]\u00e4r, desto fler skatter kan du hitta.\n[[YELLOW]]Kom ocks\u00e5 ih\u00e5g att varje gr\u00e4vnings-\n[[YELLOW]]kompatibelt material har en unik lista med olika skatter.\n[[YELLOW]]Det betyder att du kommer hitta andra saker i jord\n[[YELLOW]]\u00e4n vad du hittar i grus.\n[[DARK_AQUA]]Noteringar om Gr\u00e4vning:\n[[YELLOW]]Gr\u00e4vnings droppar \u00e4r helt anpassningsbara\n[[YELLOW]]S\u00e5 resultatet varierar fr\u00e5n server till server.
 Guides.Fishing=Guide coming soon...
 Guides.Herbalism=Guide coming soon...
 Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining stone and ores. It provides bonuses\n[[YELLOW]]to the amount of materials dropped while mining.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you must mine with a pickaxe in hand.\n[[YELLOW]]Only certain blocks award XP.\n\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, and Netherrack.\n\n[[DARK_AQUA]]How to use Super Breaker:\n[[YELLOW]]With a pickaxe in your hand, right click to ready your tool.\n[[YELLOW]]Once in this state, you have about 4 seconds to make contact\n[[YELLOW]]with Mining compatible materials, which will activate Super\n[[YELLOW]]Breaker.\n\n[[DARK_AQUA]]What is Super Breaker?\n[[YELLOW]]Super Breaker is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It triples your chance of extra items dropping and\n[[YELLOW]]enables instant break on Mining materials.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]How does Blast Mining work?\n[[YELLOW]]Blast Mining is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It gives bonuses when mining with TNT and allows you\n[[YELLOW]]to remote detonate TNT. There are three parts to Blast Mining.\n[[YELLOW]]The first part is Bigger Bombs, which increases blast radius.\n[[YELLOW]]The second is Demolitions Expert, which decreases damage\n[[YELLOW]]from TNT explosions. The third part simply increases the\n[[YELLOW]]amount of ores dropped from TNT and decreases the\n[[YELLOW]]debris dropped.
@@ -429,12 +429,12 @@ Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 Item.ChimaeraWing.Fail=**CHIMAERA WING FAILED!**
 Item.ChimaeraWing.Pass=**CHIMAERA WING**
 Item.Injured.Wait=You were injured recently and must wait to use this. [[YELLOW]]({0}s)
-Skills.Disarmed=[[DARK_RED]]Zostales rozbrojony!
+Skills.Disarmed=[[DARK_RED]]You have been disarmed!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
-Skills.NeedMore=[[DARK_RED]]Potrzebujesz wiecej
+Skills.NeedMore=[[DARK_RED]]You need more
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
-Skills.TooTired=[[RED]]Musisz odpoczac zanim ponownie uzyjesz tej umiejetnosci.
-Stats.Header.Combat=[[GOLD]]-=COMBAT SKILLS=-
+Skills.TooTired=[[RED]]You are too tired to use that ability again.
+Stats.Header.Combat=[[GOLD]]-=Stridsf\u00e4rdigheter=-
 Stats.Header.Gathering=[[GOLD]]-=GATHERING SKILLS=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Stats
